# GremlinBoard

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_SYSTEM.md  ARCHITECTURE.md  AUDIT_REPORT.md  CODEx_CLAUDE_WORKFLOW.md  Dockerfile.api  Dockerfile.web  Install-GremlinBoard-Autostart.bat  OVERHAUL_PLAN.md  PLANS.md  PLUGIN_SYSTEM.md  README.md  ROADMAP.md  RUNTIME.md  Start-GremlinBoard-Dev.bat  Start-GremlinBoard.bat  Stop-GremlinBoard.bat  Uninstall-GremlinBoard-Autostart.bat  WIDGET_SPEC.md  docker-compose.yml  environment.yml  package-lock.json  package.json  testing_api.py  tsconfig.base.json
apps/api/: pyproject.toml
apps/api/gremlinboard_api/: __init__.py  cli.py  config.py  db.py  main.py
apps/api/gremlinboard_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/tests/: conftest.py  runtime_test_harness.py  test_agent_registry.py  test_ai_clients.py  test_ai_providers.py  test_backend_sandbox.py  test_blueprint_renderer_integration.py  test_blueprint_schema.py  test_board_stream_replay.py  test_cli.py  test_cli_clients.py  test_config_schema_validation.py  test_control_plane.py  test_data_dir.py  test_event_bus.py  test_generation_pipeline.py  test_mcp_server.py  test_platform_foundations.py  test_plugin_repository.py  test_presence_manager.py  test_process_service.py  test_prompts.py  test_provider_base.py  test_python_process_host.py  test_registry.py  test_runtime_integration.py  test_spec_document_preview.py  test_spec_pipeline.py  test_templates.py  test_widget_id_sanitization.py
kits/rust-widget/: Cargo.toml  README.md
(+193 files in other folders)
