[package]
name = "gremlinboard-widget-kit"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "gremlinboard_widget_kit"
path = "src/protocol.rs"

[[bin]]
name = "gremlinboard-rust-widget-template"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"